CELDEV-1259 - add mandatory dependencies for MandatoryXClasses