@@ -1,6 +1,5 @@
 package com.celements.mandatory;
 
-import java.util.Collections;
 import java.util.List;
 
 import org.springframework.stereotype.Component;
@@ -17,7 +16,7 @@ public abstract class AbstractXWikiClassRights extends AbstractMandatoryDocument
 
   @Override
   public List<String> dependsOnMandatoryDocuments() {
-    return Collections.emptyList();
+    return List.of("celements.mandatory.MandatoryXClasses");
   }
 
   boolean checkRightsObject(XWikiDocument classDoc) {
